--- a/logowanie.html
+++ b/logowanie.html
@@ -13,7 +13,7 @@
     <div class="Container">
         <div class="LoginContainer">
             <div class="logo">
-                <a href="main.html"><img src="all\log2.png" alt="logo"></a>
+                <a href="index.html"><img src="all\log2.png" alt="logo"></a>
             </div>
             <div class="signIn">
                 <h1>Zaloguj Się</h1>
@@ -38,7 +38,7 @@
                 <div class="register">
                    Nie masz konta? <a href="register.html">Zarejestruj się!</a>
                 </div>
-                <div class="footer"><a href="main.html">&copy; Nata.Lashroom</a></div>
+                <div class="footer"><a href="index.html">&copy; Nata.Lashroom</a></div>
         </div>
     </div> 
     
