--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <div class="Container">
         <div class="LoginContainer">
             <div class="logo">
-                <a href="main.html"><img src="all\log2.png" alt="logo"></a>
+                <a href="index.html"><img src="all\log2.png" alt="logo"></a>
             </div>
             <div class="signIn">
                 <h1>Rejestracja</h1>
@@ -44,7 +44,7 @@
                 <div class="register">
                    Mam już konto! <a href="logowanie.html">Logowanie</a>
                 </div>
-                <div class="footer"><a href="main.html">&copy; Nata.Lashroom</a></div>
+                <div class="footer"><a href="index.html">&copy; Nata.Lashroom</a></div>
         </div>
     </div> 
     
